2007-03-06 Ingo Renner <typo3@ingo-renner.com>

	* Lots of thanks to Peter Foerger for the help with this update
	* RMV 0002491: Remove commented-out code from the kickstarter, thanks to Oliver Klee 
	* ADD 0004539: Manage flex fields, thanks to Jean-Baptiste Rio
	* UPD 0003723: ['feInterface'] section is depricated

2007-02-22 Ingo Renner <typo3@ingo-renner.com>

	* CHG more single quotes
	* ADD added TODO file
	
2007-01-30 Ingo Renner <typo3@ingo-renner.com>

	* FIX path for TS files is now lowercased
	
2006-12-19 Peter Foerger <p.foerger@vke-design.de>

	* FIX fixed bug 0004563: kickstarter uses .php instead of .xml lang files

2006-12-05 Ingo Renner <typo3@ingo-renner.com>

	* thanks a lot to Peter Foerger for a lot of work contributed to these fixes

	* FIX fixed bug 0004258: TS setup title allows spaces
	* FIX fixed bug 0002176: Kickstarter should check for mysql reserved words.
	* FIX fixed bug 0004601: Extending module Task Center fails

2006-11-02 Ingo Renner <typo3@ingo-renner.com>

	* FIX fixed a bug with generated BE module code, thanks to Manuel Montoya for the hint
	* FIX fixed warnings concerning not set extension dependency presets
	* FIX wrong author and author email was shown in the result overview
	* ADD added an update button after the result overview
	* CHG made the selector boxes which determine which files get written more intelligent
	* CHG when extending an existing table, the drop down with the available tables now shows the labels inverted and sorted by table name
	* RMV removed references to tt_news and tt_address in sections/class.tx_kickstarter_section_fields.php
	* RMV removed several debug() calls to clean up the code

2006-08-12 Ingo Renner <typo3@ingo-renner.com>

	* CHG moved the languages section to be right below the general information section
	* ADD made the local extension directory the default for the write location

2006-07-21 Ingo Renner <typo3@ingo-renner.com>
