@@ -4,6 +4,7 @@
 	* RMV 0002491: Remove commented-out code from the kickstarter, thanks to Oliver Klee 
 	* ADD 0004539: Manage flex fields, thanks to Jean-Baptiste Rio
 	* UPD 0003723: ['feInterface'] section is depricated
+	* ADD 0004850: sidemenu()::singles should be configurable
 
 2007-02-22 Ingo Renner <typo3@ingo-renner.com>
 
